2009-06-03  Jackson Harper  <jackson@ximian.com>

	* DependencyProperty.g.cs: Regen

2009-06-02  Chris Toshok  <toshok@ximian.com>

	* Application.cs (ReinitializeStaticData): Application uses some
	static data that needs to be cleared and reinitialized when we
	terminate.

	* Deployment.cs (SetCurrentApplication): allow a null here so we
	can clear out the unmanaged idea of what the current application
	is.
	(CreateApplication): reorder things some here to keep from having
	a dangling application laying around, and make sure we set the
	current application before we call OnStartup.

2009-06-02  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs (TerminateCurrentApplication): factor this out of
	CreateApplication and call it from further up in the chain, such
	that the new application hasn't been unpacked. we were unpacking
	the new application, then terminating the old one (which removes
	the new application, not the old one.)

2009-06-01  Chris Toshok  <toshok@ximian.com>

	* GridLength.cs: if the GridLength's are Auto it doesn't matter
	what their value is.

2009-05-28  Chris Toshok  <toshok@ximian.com>

	* Application.cs (Application.GetResourceStream): we need to
	escape uris we use to look up resources.

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ExceptionRoutedEventArgs.cs: Create a default TODO exception.
	  Prevents a lot of the MS tests from throwing NRE and timing out.

2009-05-27  Alan McGovern  <amcgovern@novell.com>

	* DependencyProperty.g.cs: Control.Enabled needs to be created
	  in native code as it's required for hittesting. A disabled
	  control and its visual children do not receive mouse events
	  and are not visible to
	  VisualTreeHelper.FindElementInHostCoordinates.

2009-05-25  Chris Toshok  <toshok@ximian.com>

	* Application.cs (OnUnhandledException): if an exception is raised
	in the UnhandledException handler, we emit it on the
	surface (which causes the plugin/JS layer to get it).
