@@ -1,3 +1,10 @@
+2009-06-05  Alan McGovern  <amcgovern@novell.com>
+
+	* System.Windows/RectTest.cs: Fix our implementation of
+	  IsEmpty to correctly handle the case where we Union against
+	  an empty rectangle. Fixes these two tests and drt 399. Does
+	  our unmanaged impl have the same semantics as this?
+
 2009-06-05  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.Net/WebClientTest.cs: Remove [MoonlightBug] on two tests
